downing the show

--- a/testing_showdownsaves.ipynb
+++ b/testing_showdownsaves.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f5596425",
+   "id": "1cfcb3ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bc816c0a",
+   "id": "91511556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aadd18e1",
+   "id": "1dcfd423",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7e059675",
+   "id": "77f3ce30",
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "502acd10",
+   "execution_count": 36,
+   "id": "783a3671",
    "metadata": {},
    "outputs": [
     {
@@ -78,8 +78,7 @@
      "output_type": "stream",
      "text": [
       "['Calyrex-Ice', '@', 'Aguav', 'Berry']\n",
-      "['Ninetales-Alola', '(F)', '@', 'Expert', 'Belt']\n",
-      "['miin', '(Cinderace)', '(F)', '@', 'Focus', 'Sash']\n"
+      "['Ninetales-Alola', '(F)', '@', 'Expert', 'Belt']\n"
      ]
     }
    ],
@@ -89,13 +88,35 @@
     "poke2 = pokes[1]\n",
     "print(poke2[0].split( ))\n",
     "poke3 = pokes[2]\n",
-    "print(poke3[0].split( ))"
+    "liner = poke3[0].split( )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e17e4215",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['miin', '(Cinderace)', '(F)', '@', 'Focus', 'Sash']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "we = np.argwhere( np.array(poke3[0].split(), dtype='U64') == '14')\n",
+    "liner"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d1a082a2",
+   "id": "189d1718",
    "metadata": {},
    "outputs": [
     {
@@ -113,10 +134,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88533f76",
+   "id": "ad731f55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#no nature means Serious Nature\n"
+   ]
   }
  ],
  "metadata": {
