more more more showdown stuff

--- a/testing_showdownsaves.ipynb
+++ b/testing_showdownsaves.ipynb
@@ -22,13 +22,13 @@
     "    #while fil.readline\n",
     "    #this_poke = []\n",
     "    #this_poke fil.readline\n",
-    "with open('showdown.sav' ,'r') as fil:\n",
+    "with open('show2.sav' ,'r') as fil:\n",
     "    lines= [ i for i in fil]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "1dcfd423",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "77f3ce30",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "783a3671",
    "metadata": {},
    "outputs": [
@@ -88,58 +88,134 @@
     "poke2 = pokes[1]\n",
     "print(poke2[0].split( ))\n",
     "poke3 = pokes[2]\n",
-    "liner = poke3[0].split( )"
+    "liner = poke3[0].split( )\n",
+    "poke4 = pokes[3]\n",
+    "liner = poke4[0].split( )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "e17e4215",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['miin', '(Cinderace)', '(F)', '@', 'Focus', 'Sash']"
+       "['Conkeldurr']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "we = np.argwhere( np.array(poke3[0].split(), dtype='U64') == '14')\n",
+    "we = np.argwhere( np.array(poke3[0].split(), dtype='U64') == '@')\n",
     "liner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "189d1718",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Conkeldurr  \\n',\n",
+       " 'Ability: Guts  \\n',\n",
+       " 'Level: 64  \\n',\n",
+       " 'EVs: 64 HP / 4 Atk / 128 SpA / 132 SpD / 180 Spe  \\n',\n",
+       " 'Hardy Nature  \\n',\n",
+       " 'IVs: 2 Atk / 0 Def  \\n',\n",
+       " '- Brick Break  \\n',\n",
+       " '- Defog  \\n',\n",
+       " '- Earthquake  \\n',\n",
+       " '- Focus Blast  \\n']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poke4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ad731f55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#no nature means Serious Nature\n",
+    "not ''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a9b94136",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "['62' '0' '0' '252' '0' '0']\n"
      ]
     }
    ],
    "source": [
-    "print('Nature' in poke1[3])"
+    "evs = ['62','','','252','','']\n",
+    "evs_a = np.array(evs,dtype=object)\n",
+    "evs_b = np.where(evs_a=='',0,evs)\n",
+    "print(evs_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1eb2f7a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 4, 5])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.squeeze(np.argwhere( evs_a == ''))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad731f55",
+   "id": "476b019c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#no nature means Serious Nature\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
