dont look at me

--- a/testing_showdownsaves.ipynb
+++ b/testing_showdownsaves.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "783a3671",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "e17e4215",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "['Conkeldurr']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "189d1718",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        " '- Focus Blast  \\n']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,29 +147,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "ad731f55",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Atk\n"
+     ]
     }
    ],
    "source": [
-    "#no nature means Serious Nature\n",
-    "not ''\n"
+    "evs = poke4[3]\n",
+    "en = evs[5:]\n",
+    "#print( en.split(' / ') )\n",
+    "shee = en.split(' / ')\n",
+    "#print(shee)\n",
+    "fre = ['HP','Atk','Def','SpA','SpD','Spe']\n",
+    "stt = enumerate(['HP','Atk','Def','SpA','SpD','Spe'])\n",
+    "st = list(stt)\n",
+    "print(st[1][1])\n",
+    "#for i in st:\n",
+    "#    if i[1] in en.split(' / ')[1]: print(i[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
+   "id": "774d2312",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64 HP\n",
+      "7\n",
+      "4 Atk\n",
+      "7\n",
+      "128 SpA\n",
+      "7\n",
+      "132 SpD\n",
+      "7\n",
+      "180 Spe  \n",
+      "\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in shee:\n",
+    "    print(i)\n",
+    "    ii = i.split(' ')\n",
+    "    if ii[1] in fre:\n",
+    "        print(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "a9b94136",
    "metadata": {},
    "outputs": [
@@ -190,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "1eb2f7a3",
    "metadata": {},
    "outputs": [
@@ -200,7 +238,7 @@
        "array([1, 2, 4, 5])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,6 +251,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "476b019c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64ce2699",
    "metadata": {},
    "outputs": [],
    "source": []
