--- a/testing_showdownsaves.ipynb
+++ b/testing_showdownsaves.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "id": "ad731f55",
    "metadata": {},
    "outputs": [
@@ -155,6 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['64 HP', '4 Atk', '128 SpA', '132 SpD', '180 Spe  \\n']\n",
       "Atk\n"
      ]
     }
@@ -168,6 +169,7 @@
     "fre = ['HP','Atk','Def','SpA','SpD','Spe']\n",
     "stt = enumerate(['HP','Atk','Def','SpA','SpD','Spe'])\n",
     "st = list(stt)\n",
+    "print(shee)\n",
     "print(st[1][1])\n",
     "#for i in st:\n",
     "#    if i[1] in en.split(' / ')[1]: print(i[0])"
@@ -175,7 +177,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
+   "id": "1b03905a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dicts = dict([('HP',0),('Atk',1),('Def',2),('SpA',3),('SpD',4),('Spe',5)])\n",
+    "dicts['Atk']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "936cd225",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(0, 1), dtype=int64)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doo = np.char.split( np.array(shee,dtype=str) )\n",
+    "np.argwhere( np.isin(fre, doo) )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "id": "774d2312",
    "metadata": {},
    "outputs": [
@@ -183,31 +229,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64 HP\n",
-      "7\n",
-      "4 Atk\n",
-      "7\n",
-      "128 SpA\n",
-      "7\n",
-      "132 SpD\n",
-      "7\n",
-      "180 Spe  \n",
-      "\n",
-      "7\n"
+      "['64', '4', '', '128', '132', '180']\n"
      ]
     }
    ],
    "source": [
-    "for i in shee:\n",
-    "    print(i)\n",
-    "    ii = i.split(' ')\n",
-    "    if ii[1] in fre:\n",
-    "        print(7)"
+    "empt = ['','','','','','']\n",
+    "for i in range(len(shee)):\n",
+    "    #print(i)\n",
+    "    #ii = shee[i].split(' ')\n",
+    "    if shee[i].split(' ')[1] in fre: empt[dicts[shee[i].split(' ')[1]]] = shee[i].split(' ')[0]\n",
+    "print(empt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
+   "id": "2fe92ff1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[list(['64', 'HP']) list(['4', 'Atk']) list(['128', 'SpA'])\n",
+      " list(['132', 'SpD']) list(['180', 'Spe'])]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_arr = np.array(shee, dtype=str)\n",
+    "base_arr = np.array(fre, dtype=str)\n",
+    "\n",
+    "\n",
+    "#print(data_arr, base_arr)\n",
+    "#base2 =np.char.split(data_arr)\n",
+    "#print(base2)\n",
+    "#np.isin(  )\n",
+    "#print(data_arr)\n",
+    "#np.isin( data_arr, base_arr)\n",
+    "#np.where( np.isin(data_arr, shee),  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a2ef33c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "we1 = np.where( shee in  , )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "a9b94136",
    "metadata": {},
    "outputs": [
@@ -228,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "1eb2f7a3",
    "metadata": {},
    "outputs": [
@@ -238,7 +324,7 @@
        "array([1, 2, 4, 5])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,6 +348,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d927afbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -280,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
