showdown saves! its giving!

--- a/testing_showdownsaves.ipynb
+++ b/testing_showdownsaves.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1cfcb3ed",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "91511556",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1dcfd423",
    "metadata": {},
    "outputs": [],
@@ -47,41 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "77f3ce30",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Calyrex-Ice @ Aguav Berry  \\n', 'Ability: As One (Glastrier)  \\n', 'EVs: 108 HP / 100 Atk / 56 SpA / 68 SpD / 68 Spe  \\n', 'Naive Nature  \\n', 'IVs: 21 HP / 0 SpA / 17 Spe  \\n', '- Agility  \\n', '- Baton Pass  \\n', '- Body Slam  \\n', '- Double-Edge  \\n'] \n",
-      "\n",
-      " ['Ninetales-Alola (F) @ Expert Belt  \\n', 'Ability: Snow Warning  \\n', 'EVs: 40 HP / 40 Atk / 92 Def / 92 SpA / 92 SpD / 56 Spe  \\n', 'IVs: 0 Atk  \\n', '- Calm Mind  \\n', '- Encore  \\n', '- Blizzard  \\n', '- Extrasensory  \\n'] \n",
-      "\n",
-      " ['miin (Cinderace) (F) @ Focus Sash  \\n', 'Ability: Libero  \\n', 'Shiny: Yes  \\n', 'EVs: 48 HP / 108 Atk / 92 Def / 104 SpA / 88 SpD / 68 Spe  \\n', '- Court Change  \\n', '- Blaze Kick  \\n', '- Fire Blast  \\n', '- Flame Charge  \\n']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(pokes[0],'\\n\\n',pokes[1],'\\n\\n',pokes[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "783a3671",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Calyrex-Ice', '@', 'Aguav', 'Berry']\n",
-      "['Ninetales-Alola', '(F)', '@', 'Expert', 'Belt']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "poke1 = pokes[0]\n",
     "print(poke1[0].split( ))\n",
@@ -95,21 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e17e4215",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Conkeldurr']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "we = np.argwhere( np.array(poke3[0].split(), dtype='U64') == '@')\n",
     "liner"
@@ -117,49 +85,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "189d1718",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Conkeldurr  \\n',\n",
-       " 'Ability: Guts  \\n',\n",
-       " 'Level: 64  \\n',\n",
-       " 'EVs: 64 HP / 4 Atk / 128 SpA / 132 SpD / 180 Spe  \\n',\n",
-       " 'Hardy Nature  \\n',\n",
-       " 'IVs: 2 Atk / 0 Def  \\n',\n",
-       " '- Brick Break  \\n',\n",
-       " '- Defog  \\n',\n",
-       " '- Earthquake  \\n',\n",
-       " '- Focus Blast  \\n']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "poke4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "id": "9da752c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv = poke4[2]\n",
+    "lv = lv[7:]\n",
+    "int( float(lv) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc681aa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nat = poke4[4]\n",
+    "print(nat.split()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e2e061b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mov = poke4[7]\n",
+    "mov[2:].split('  \\n')[0] == 'Defog'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ad731f55",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['64 HP', '4 Atk', '128 SpA', '132 SpD', '180 Spe  \\n']\n",
-      "Atk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evs = poke4[3]\n",
     "en = evs[5:]\n",
@@ -177,43 +150,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "1b03905a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dicts = dict([('HP',0),('Atk',1),('Def',2),('SpA',3),('SpD',4),('Spe',5)])\n",
-    "dicts['Atk']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "936cd225",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([], shape=(0, 1), dtype=int64)"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "doo = np.char.split( np.array(shee,dtype=str) )\n",
     "np.argwhere( np.isin(fre, doo) )\n"
@@ -221,18 +161,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
+   "id": "1b03905a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicts = dict([('HP',0),('Atk',1),('Def',2),('SpA',3),('SpD',4),('Spe',5)])\n",
+    "dicts['Atk']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "774d2312",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['64', '4', '', '128', '132', '180']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "empt = ['','','','','','']\n",
     "for i in range(len(shee)):\n",
@@ -244,29 +187,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
+   "id": "95c5be07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moves = []\n",
+    "not moves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "476b019c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(en)\n",
+    "def evsss(line):\n",
+    "    line_ = line.split(' / ')\n",
+    "    \n",
+    "    ans = \n",
+    "    return ans\n",
+    "print(evsss(en))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2fe92ff1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[list(['64', 'HP']) list(['4', 'Atk']) list(['128', 'SpA'])\n",
-      " list(['132', 'SpD']) list(['180', 'Spe'])]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([False, False, False, False, False])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_arr = np.array(shee, dtype=str)\n",
     "base_arr = np.array(fre, dtype=str)\n",
@@ -293,18 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a9b94136",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['62' '0' '0' '252' '0' '0']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evs = ['62','','','252','','']\n",
     "evs_a = np.array(evs,dtype=object)\n",
@@ -314,21 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1eb2f7a3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 4, 5])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.squeeze(np.argwhere( evs_a == ''))"
    ]
@@ -336,23 +268,147 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "476b019c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "64ce2699",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from moves import natures\n",
+    "we = np.argwhere( natures=='Gentle' )\n",
+    "wee = np.squeeze(we)\n",
+    "natures[wee[0],wee[1]]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d927afbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from moves import mov\n",
+    "from dexpoke import dex\n",
+    "mov['name']\n",
+    "dex['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc8d45a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int( np.argwhere( dex['name'] == 'Conkeldurr') )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf985c08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"tackle\" in mov['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "30a640f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from base_pokemon import loadShowdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "94451d3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['miin', '(Cinderace)', '(F)']\n",
+      "['Conkeldurr']\n"
+     ]
+    }
+   ],
+   "source": [
+    "we = loadShowdown('show3.sav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a7fca552",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "############ miin ############\n",
+      "\n",
+      "Level 100 \tFire\n",
+      "Nature : Serious | Up - None, Down - None\n",
+      "HP  : \t313.00/313.00 \t100.00%\n",
+      "Atk : \t295.00\n",
+      "Def : \t209.00\n",
+      "Sp.A: \t192.00\n",
+      "Sp.D: \t208.00\n",
+      "Spe : \t291.00\n",
+      "############ miin's Moves #############\n",
+      "[1] Fire Blast\tFire\t5/5 PP\n",
+      "##############################################\n",
+      "This Pokemon was initialized on\n",
+      "=== Wed 03 May 2023 @ 20:25:16 UTC\n",
+      "=== In the EDT timezone.\n",
+      "=== It was made in Pokemon Showdown!\n",
+      "##############################################\n",
+      "\n",
+      "############ Conkeldurr ############\n",
+      "\n",
+      "Level 64 \tFighting\n",
+      "Nature : Hardy | Up - None, Down - None\n",
+      "HP  : \t238.00/238.00 \t100.00%\n",
+      "Atk : \t186.12\n",
+      "Def : \t126.60\n",
+      "Sp.A: \t115.72\n",
+      "Sp.D: \t129.16\n",
+      "Spe : \t111.24\n",
+      "############ Conkeldurr's Moves #############\n",
+      "[1] Brick Break\tFighting\t15/15 PP\n",
+      "[2] Earthquake\tGround\t10/10 PP\n",
+      "[3] Focus Blast\tFighting\t5/5 PP\n",
+      "##############################################\n",
+      "This Pokemon was initialized on\n",
+      "=== Wed 03 May 2023 @ 20:25:16 UTC\n",
+      "=== In the EDT timezone.\n",
+      "=== It was made in Pokemon Showdown!\n",
+      "##############################################\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in we: i.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ae62467",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba385fb3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -374,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
